argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.greenrnd.com`)
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls:
    secretName: greenrnd


#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRouteTCP
#metadata:
#  name: argocd
#  namespace: argocd
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: >-
#        HostSNI(`argo.greenrnd.com`)
#      services:
#        - name: argocd-server
#          namespace: argocd
#          port: 443
#  tls:
#    passthrough: true
